apps/media/radarr/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: radarr-gateway
  namespace: media
spec:
  gatewayClassName: cilium
  listeners:
    - name: https
      protocol: HTTPS
      port: 443
      hostname: radarr.corruptmane.xyz
      tls:
        mode: Terminate
        certificateRefs:
          - name: radarr-tls
