apps/media/radarr/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: radarr
  namespace: media
spec:
  parentRefs:
    - name: radarr-gateway
  hostnames:
    - radarr.corruptmane.xyz
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: radarr
          port: 7878
